--- a/Learn-React/package.json
+++ b/Learn-React/package.json
@@ -10,14 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.11.2",
     "@tailwindcss/vite": "^4.1.14",
     "axios": "^1.12.2",
     "lodash": "^4.17.21",
+    "nprogress": "0.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-paginate": "^8.3.0",
     "react-pro-sidebar": "^1.1.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.4",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.14"
