--- a/todo-app-redux/package.json
+++ b/todo-app-redux/package.json
@@ -3,17 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^2.11.0",
-    "antd": "4.17.2",
-    "react": "18",
-    "react-dom": "18",
-    "react-redux": "^9.2.0",
-    "react-scripts": "5.0.1",
-    "redux": "^5.0.1",
+    "@reduxjs/toolkit": "^1.7.0",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.17.2",
+    "miragejs": "^0.1.48",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "react-scripts": "4.0.3",
+    "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
-    "reselect": "^5.1.1",
-    "uuid": "^13.0.0",
-    "web-vitals": "^2.1.0"
+    "reselect": "^4.1.5",
+    "uuid": "^8.3.2",
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,5 +42,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "mirage.js": "^1.0.0",
+    "postcss": "^7.0.39",
+    "postcss-safe-parser": "^4.0.2"
   }
 }
